// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form radio group component should render disabled when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    disabled=""
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <div
      class="govuk-radios govuk-radios--conditional"
      data-module="govuk-radios"
      id="radio-group-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-A"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-B"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-C"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render error message for textarea if correct error exists in errors object 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <div
      class="govuk-radios govuk-radios--conditional"
      data-module="govuk-radios"
      id="radio-group-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-ValueA"
          id="radio-group-ValueA"
          name="radio-group"
          type="radio"
          value="ValueA"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-ValueA"
        >
          labelA
        </label>
      </div>
      <div
        class="govuk-radios__conditional govuk-radios__conditional--hidden"
        id="conditional-radio-group-ValueA"
      >
        <div
          class="govuk-form-group  govuk-form-group--error"
        >
          <label
            class="govuk-label"
            for="ValueAText"
          >
            someLabel
          </label>
          <span
            class="govuk-error-message"
            id="ValueAText-error"
          >
            <span
              class="govuk-visually-hidden"
            >
              Error:
            </span>
            Some error message
          </span>
          <textarea
            aria-describedby="ValueAText  ValueAText-error"
            class="govuk-textarea  govuk-textarea--error"
            id="ValueAText"
            name="ValueAText"
            rows="4"
          />
        </div>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-ValueB"
          id="radio-group-ValueB"
          name="radio-group"
          type="radio"
          value="ValueB"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-ValueB"
        >
          labelB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-ValueC"
          id="radio-group-ValueC"
          name="radio-group"
          type="radio"
          value="ValueC"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-ValueC"
        >
          labelC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <div
      class="govuk-radios govuk-radios--conditional"
      data-module="govuk-radios"
      id="radio-group-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-A"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-B"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-C"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with error when passed 1`] = `
<div
  class="govuk-form-group govuk-form-group--error"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <span
      class="govuk-error-message"
      id="radio-group-error"
    >
      Some error message
    </span>
    <div
      class="govuk-radios govuk-radios--conditional"
      data-module="govuk-radios"
      id="radio-group-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-A"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-B"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-C"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with hint when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <span
      class="govuk-hint"
    >
      Put some text in the box below
    </span>
    <div
      class="govuk-radios govuk-radios--conditional"
      data-module="govuk-radios"
      id="radio-group-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-A"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-B"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-C"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with label when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      >
        My text field
      </span>
    </legend>
    <div
      class="govuk-radios govuk-radios--conditional"
      data-module="govuk-radios"
      id="radio-group-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-A"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-B"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-C"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with value when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <div
      class="govuk-radios govuk-radios--conditional"
      data-module="govuk-radios"
      id="radio-group-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          checked=""
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-A"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-B"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-C"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should textarea if conditional content exists 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <div
      class="govuk-radios govuk-radios--conditional"
      data-module="govuk-radios"
      id="radio-group-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-ValueA"
          id="radio-group-ValueA"
          name="radio-group"
          type="radio"
          value="ValueA"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-ValueA"
        >
          labelA
        </label>
      </div>
      <div
        class="govuk-radios__conditional govuk-radios__conditional--hidden"
        id="conditional-radio-group-ValueA"
      >
        <div
          class="govuk-form-group "
        >
          <label
            class="govuk-label"
            for="ValueAText"
          >
            someLabel
          </label>
          <textarea
            aria-describedby="ValueAText "
            class="govuk-textarea "
            id="ValueAText"
            name="ValueAText"
            rows="4"
          />
        </div>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-ValueB"
          id="radio-group-ValueB"
          name="radio-group"
          type="radio"
          value="ValueB"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-ValueB"
        >
          labelB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          data-aria-controls="conditional-radio-group-ValueC"
          id="radio-group-ValueC"
          name="radio-group"
          type="radio"
          value="ValueC"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-ValueC"
        >
          labelC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;
